# ARA_Library

./: .gitignore  .gitmodules  ChangeLog.txt
.github/workflows/: build-ara-plugin-demo.yml
Debug/: ARAContentLogger.h  ARAContentValidator.h
Dispatch/: ARAContentReader.h  ARAHostDispatch.cpp  ARAHostDispatch.h  ARAPlugInDispatch.cpp  ARAPlugInDispatch.h
IPC/: ARAIPCAudioUnit_v3.mm  ARAIPCConnection.cpp  ARAIPCConnection.h  ARAIPCEncoding.h  ARAIPCProxyHost.cpp  ARAIPCProxyPlugIn.cpp
PlugIn/: ARAPlug.cpp  ARAPlug.h
test/: SocketChannel.h  SocketEncoder.h  ara_host_test.cpp  ara_plugin_test.cpp  ara_plugin_test_linux.cpp  build-wine-plugin.sh  meson.build
test/wine-shims/: Windows.h  no_rt_threads.c  wine_debug_compat.h
